--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
         <h5> Current Time:{{ clock.now }}</h5>
     </div>
     <hr/>
-
-    <a href="html/test.html">Go to test</a>
+    <a href="html/test.html">测试跳转</a>
 </body>
 </html>
