--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script src="js/other/angular.js"></script>
     <script src="js/common/common.date.js"></script>
     <script src="js/test/app.js"></script>
+    <script src="js/test/queryData.js"></script>
 </head>
 <body ng-app="app">
     <h1 style="text-align: center">Welcome to our Blog</h1>
