--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
     <div ng-controller="MyController" style="text-align: right">
         <h5> Current Time:{{ clock.now }}</h5>
     </div>
+    <div ng-controller = "showController">
+        <h4>Add and subtract event</h4>
+        <button ng-click="showInfo()" >测试读取信息</button>
+        题目：{{title}}
+        <br/>
+        正文：{{content}}
+    </div>
     <hr/>
     <a href="html/test.html">测试跳转</a>
 </body>
