--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <div id="boxDiv" ng-controller="ShowController" class="box blurred-bg tinted">
     <h2>{{titleInfo}} | {{timeInfo}}</h2>
-    <div>{{contentInfo}}</div>
+    <p>{{contentInfo}}</p>
 </div>
 
 <hr/>
