--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 <h1 style="text-align: center">Welcome to our Blog</h1>
 
 <div ng-controller="MyController" style="text-align: right">
-    <h5> Current Time:{{ clock.now }}</h5>
+    <h2> Current Time:{{ clock.now }}</h2>
 </div>
 
 <div id="boxDiv" ng-controller="ShowController" class="box blurred-bg tinted">
     <h2>{{titleInfo}} | {{timeInfo}}</h2>
-    <div>{{contentInfo}}</div>
+    <p>{{contentInfo}}</p>
 </div>
 
 <hr/>
