--- a/html/test.html
+++ b/html/test.html
@@ -9,54 +9,114 @@
 
     <script src="../js/test/app.js"></script>
 </head>
-<body ng-app="app">
-<div>
-    <div ng-controller="FilterController">
-        <h4>初级绑定数据</h4>
-        Your name:<input type="text" ng-model="person.name" placeholder="world"/>
-        Hello <b>{{person.name || "world"}}!</b>
-
-        <h4>内置过滤器，字母变大写：</h4>
-        Hello <b>{{person.name | uppercase}}</b>
-
-        <h4>自定义过滤器，首字母大写：</h4>
-        Hello <b>{{person.nameLower | capitalize}}</b>
-
-        <h4>内置过滤器，数字保留2位：</h4>
-        <b>{{person.name | number:2}}</b>
-    </div>
-</div>
-<hr/>
-<div ng-controller="MyController">
-    <h4>时钟</h4>
-    <h5>Time:{{ clock.now }}</h5>
-</div>
-<hr/>
-
-<div ng-controller="CalcController">
-    <h4>Click事件</h4>
-    <button ng-click="add(1)">Add</button>
-    <button ng-click="subtract(1)">Subtract</button>
-    <br/>
-    Current value:{{counter}}
-</div>
-<hr/>
-
-<div ng-controller="WatchController">
-    <h4>表达式和插入</h4>
-    <input type="text" ng-model="watchName"/><br/>
-    before:<b>{{beforeWatchName}}</b>
-    <br/>
-    &nbsp;after:<b>{{watchName}}</b>
-    <br/><br/>
-
+<body>
+<div ng-app="app">
     <div>
-        <input type="text" ng-model="mailTo" type="email"/><br/>
-        <textarea ng-model="emailBody"></textarea>
-        <pre>{{previewText}}</pre>
+        <div ng-controller="FilterController">
+            <h4>初级绑定数据</h4>
+            Your name:<input type="text" ng-model="person.name" placeholder="world"/>
+            Hello <b>{{person.name || "world"}}!</b>
+
+            <h4>内置过滤器，字母变大写：</h4>
+            Hello <b>{{person.name | uppercase}}</b>
+
+            <h4>自定义过滤器，首字母大写：</h4>
+            Hello <b>{{person.nameLower | capitalize}}</b>
+
+            <h4>内置过滤器，数字保留2位：</h4>
+            <b>{{person.name | number:2}}</b>
+        </div>
     </div>
+    <hr/>
+    <div ng-controller="MyController">
+        <h4>时钟</h4>
+        <h5>Time:{{ clock.now }}</h5>
+    </div>
+    <hr/>
+
+    <div ng-controller="CalcController">
+        <h4>Click事件</h4>
+        <button ng-click="add(1)">Add</button>
+        <button ng-click="subtract(1)">Subtract</button>
+        <br/>
+        Current value:{{counter}}
+    </div>
+    <hr/>
+
+    <div ng-controller="WatchController">
+        <h4>表达式和插入</h4>
+        <input type="text" ng-model="watchName"/><br/>
+        before:<b>{{beforeWatchName}}</b>
+        <br/>
+        &nbsp;after:<b>{{watchName}}</b>
+        <br/><br/>
+        <h4>模板</h4>
+
+        <div>
+            <input type="text" ng-model="mailTo"/><br/>
+            <textarea ng-model="emailBody"></textarea>
+            <pre>{{previewText}}</pre>
+        </div>
+    </div>
+    <hr/>
+
+    <h4>自定义指令</h4>
+    <my-derective value="http://www.baidu.com" text="百度"></my-derective>
+    <hr/>
+
+    <h4>继承</h4>
+
+    <div ng-init="name='grandfather'">
+        第一代：{{name}}
+        <div ng-controller="extendAndIsolation">
+            第二代：{{name}}
+            <div ng-controller="secondExtendAndIsolation">
+                第三代：{{name}}
+            </div>
+        </div>
+    </div>
+
+    <h4>隔离</h4>
+
+    <div ng-init="name='grandfather'">
+        第一代：{{name}}
+        <div ng-init="name='father'" ng-controller="extendAndIsolation">
+            第二代：{{name}}
+            <div ng-init="name='me'" ng-controller="secondExtendAndIsolation">
+                第三代：{{name}}
+            </div>
+        </div>
+    </div>
+
+    <h4>继承但不隔离</h4>
+
+    <div ng-init="value='extendBut'" ng-controller="extendButNotController">
+        外部：{{value}}
+        <input ng-model="value">
+
+        <div custom-directive></div>
+    </div>
+
+    <h4>继承并隔离</h4>
+
+    <div ng-init="value='extendAnd'" ng-controller="extendAndController">
+        外部：{{value}}
+        <input ng-model="value">
+
+        <div custom-directive-two></div>
+    </div>
+
+    <h4>隔离不继承</h4>
+
+    <div ng-init="value='isolation'" ng-controller="isolationController">
+        外部：{{value}}
+        <input ng-model="value">
+
+        <div custom-directive-three></div>
+    </div>
+    <hr/>
 </div>
-<hr/>
+
 
 <div>
     <h4>Angular内置对象</h4>
