双向指令数据绑定

--- a/index.html
+++ b/index.html
@@ -30,5 +30,7 @@
 <a href="html/test.html">AngelarJS 基本练习</a>
 <br/>
 <a href="html/form.html">表单</a>
+<br/>
+<a href="html/directive.html">指令</a>
 </body>
 </html>
