自定义指令属性详解

--- a/html/directive.html
+++ b/html/directive.html
@@ -139,6 +139,25 @@
         </button>
         Number is: {{ x }}
     </div>
+
+
+    <h4></h4>
+
+    <div side-box title="Links">
+        <ul>
+            <li>First link</li>
+            <li>Second link</li>
+        </ul>
+    </div>
+    <div side-box title="TagCloud">
+        <div class="tagcloud">
+            <a href="">Graphics</a>
+            <a href="">AngularJS</a>
+            <a href="">D3</a>
+            <a href="">Front-end</a>
+            <a href="">Startup</a>
+        </div>
+    </div>
 </div>
 </body>
 </html>
