--- a/html/directive.html
+++ b/html/directive.html
@@ -158,6 +158,26 @@
             <a href="">Startup</a>
         </div>
     </div>
+
+    <h4>$controller嵌套$transclude，将普通div转换成"a"标签</h4>
+
+    <div link-directive>
+        <div>http://www.bing.com</div>
+    </div>
+
+    <h4>匿名controller</h4>
+
+    <div as-directive></div>
+
+
+    <h4>controller,compile,link执行顺序</h4>
+
+    <div example-directive></div>
+
+    <h4>加法计算器</h4>
+
+    <div link-attr-directive></div>
+    {{result}}
 </div>
 </body>
 </html>
